SERVER-38748 Background indexes created through applyOps should run on the command thread

(cherry picked from commit 9c49d721526ac83ada34950841ceef5b0b48c3c5)